test/ill-formed/unsupported/complex_literal.py
x = 3 + 4j
print(x)
